genetic-algorithm/Logs/8-26-2017.log
nmerc54@ubuntu:~/Documents/CPP/genetic-algorithm/genetic-algorithm$ g++ -o main main.cpp 
In file included from node.cpp:1:0,
                 from main.cpp:1:
node.h:5:2: error: ‘string’ does not name a type
  string _chromosome;
  ^
node.h:12:15: error: expected ‘)’ before ‘chromosome’
  node( string chromosome );
               ^
node.h:18:2: error: ‘string’ does not name a type
  string getChromosome();
  ^
In file included from main.cpp:1:0:
node.cpp:3:11: error: expected constructor, destructor, or type conversion before ‘(’ token
 node::node( string chromosome ){
           ^
node.cpp:16:10: error: found ‘:’ in nested-name-specifier, expected ‘::’
 void node:calculateFitness(){
          ^
node.cpp:44:1: error: ‘string’ does not name a type
 string node::getChromosome(){
 ^
node.cpp: In function ‘void setCrossoverPoint(int)’:
node.cpp:53:2: error: ‘_crossover_point’ was not declared in this scope
  _crossover_point = cross_point;
  ^
node.cpp: In function ‘void setMutationRate(float)’:
node.cpp:60:2: error: ‘_mutation_rate’ was not declared in this scope
  _mutation_rate = rate;
  ^
main.cpp: In function ‘int main()’:
main.cpp:10:2: error: ‘mynode’ was not declared in this scope
  mynode = node( "10110001" );
  ^
main.cpp:10:28: error: no matching function for call to ‘node::node(const char [9])’
  mynode = node( "10110001" );
                            ^
main.cpp:10:28: note: candidates are:
In file included from node.cpp:1:0,
                 from main.cpp:1:
node.h:3:7: note: node::node()
 class node{
       ^
node.h:3:7: note:   candidate expects 0 arguments, 1 provided
node.h:3:7: note: node::node(const node&)
node.h:3:7: note:   no known conversion for argument 1 from ‘const char [9]’ to ‘const node&’
main.cpp:4:14: error: expected primary-expression before ‘=’ token
 #define EXIT = 0
              ^
main.cpp:20:9: note: in expansion of macro ‘EXIT’
  return EXIT;
         ^

